refactor cause im bored

--- a/index.html
+++ b/index.html
@@ -16,7 +16,11 @@
       <input type="text" class="num" />
       <button>Digital Root</button>
     </div>
-    <div class="root">&nbsp;</div>
+    <div class="root">
+      <p class="root-text hidden">
+        The digital root of <span id="value"></span> is <span id="digital-root"></span>
+      </p>
+    </div>
     <div class="error"></div>
   </div>
   <script src="script.js"></script>
